--- a/education.html
+++ b/education.html
@@ -285,16 +285,14 @@
       <div class="timeline-img"></div>
 
       <div class="timeline-content js--fadeInLeft">
-        <div class="timeline-img-header" style="background-image: url('assets/images/education-page/edTimeline1.png'); background-repeat: no-repeat; background-size: auto;">
-          <h2>Columbia University</h2>
+        <div class="timeline-img-header" style="background-image: url('assets/images/education-page/ikc.png); background-repeat: no-repeat; background-size: auto;">
+          <h2></h2>
         </div>
         <div class="date">2021-2022</div>
         <div>
-            <h6>Masters of Science, Computer Science & Engineering</h4>
-            <li>Top 1% in the department</li>
-            <li>Best undergraduate Reseracher</li>
-            <li>Betsy Schumacker Woman</li>
-            <li>Athlete of the Year Award</li>
+            <h6>Politechnika Poznańska - Master's degree of Automatic Control and Robotics</h4>
+            <li>Specialization - Smart Aerospace and Autonomous Systems</li>
+            <li>During my undergraduate education in the summer semester of the my 3rd year in 2019, I participated in the Erasmus+ program at the same university.</li>
         </div>
         <a class="bnt-more" href="javascript:void(0)">More</a>
       </div>
@@ -308,16 +306,14 @@
       <div class="timeline-content timeline-card js--fadeInRight">
         <div>
             <div class="timeline-img-header" style="background-image: url('assets/images/education-page/edTimeline2.png'); background-repeat: no-repeat; background-size: auto; background-position: center top">
-              <h2 style="top: 140px">Massachusetts Institute of Technology</h2>
+              <h2 style="top: 140px"></h2>
             </div>
         </div>
-        <div class="date">2017-2021</div>
+        <div class="date">2015-2020</div>
         <div class="alignment">
-            <h6>Bachelors of Science, Computer Science & Engineering</h4>
-            <li>Top 1% in the department</li>
-            <li>Best undergraduate Reseracher</li>
-            <li>Betsy Schumacker Woman</li>
-            <li>Athlete of the Year Award</li>
+            <h6>Izmir Katip Celebi University - Bachelor's degree of Electrical & Electronics Engineering</h4>
+            <li>3.57/4 GPA</li>
+            <li>Highest Ranked Student of the Department</li>
         </div>
         <a class="bnt-more" href="javascript:void(0)">More</a>
       </div>
@@ -332,15 +328,13 @@
 
       <div class="timeline-content js--fadeInLeft">
         <div class="timeline-img-header" style="background-image: url('assets/images/education-page/edTimeline3.png'); background-repeat: no-repeat; background-size: auto">
-          <h2 style="top: 220px">Delhi Public School</h2>
+          <h2 style="top: 220px"></h2>
         </div>
-        <div class="date">2013-2017</div>
+        <div class="date">2016-2021</div>
         <div class="align-third">
-            <h6>High School</h4>
-            <li>Top 1% in the department</li>
-            <li>Best undergraduate Reseracher</li>
-            <li>Betsy Schumacker Woman</li>
-            <li>Athlete of the Year Award</li>
+            <h6>Anadolu University - Bachelor's degree of Business Administration</h4>
+            <li>2.96/4 GPA</li>
+            <li>Certificate of Honour for the 2016-2017 school year</li>
         </div>
         <a class="bnt-more" href="javascript:void(0)">More</a>
       </div>
