--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
     <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-167979537-2"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DNENL23GW2"></script>
     <!-- Fetching our Google Tag Manager -->
 
     <!--JavaScript at end of body for optimized loading-->
