--- a/index.html
+++ b/index.html
@@ -143,18 +143,12 @@
                             </svg>
                         </a>
 
-                        <a class="socialicon codeforces" href="https://turhancankargin.wordpress.com/" target="_blank" rel="author">
-                            <svg class="codeforces-icon" xmlns="http://www.w3.org/2000/svg" viewBox="5 0 14 19" width="100" height="100">
-                                <g>
-                                    <rect class="red" x="15" width="2" height="6.5" rx="0.7" y="0" fill="#AE0F0A" />
-                                    <rect class="blue" x="12" width="2" height="6.5" rx="0.7" y="0" fill="#4F81C1" />
-                                    <rect class="yellow" x="9" width="2" height="6.5" rx="0.7" y="0" fill="#FFD400" />
-                                </g>
-                            </svg>
-                        </a>
-
                         <a class="socialicon kaggle" href="https://www.kaggle.com/turhancankargin" target="_blank" rel="author">
                             <i class="fab fa-kaggle"></i>
+                        </a>
+
+                        <a class="socialicon medium" href="https://turhancankargin.medium.com" target="_blank" rel="author">
+                            <i class="fab fa-medium"></i>
                         </a>
 
                         <a class="socialicon instagram" href="https://www.instagram.com/turhan.cann" target="_blank" rel="author">
@@ -181,6 +175,16 @@
                                                             c6,5.1,10.8,11.5,13.8,18.8c2.9,7.4,7.7,24.1,41.5,17.8" />
                             </svg>
                         </a>
+
+                        <a class="socialicon codeforces" href="https://linktr.ee/turhancankargin" target="_blank" rel="author">
+                            <svg class="codeforces-icon" xmlns="http://www.w3.org/2000/svg" viewBox="5 0 14 19" width="100" height="100">
+                                <g>
+                                    <rect class="red" x="15" width="2" height="6.5" rx="0.7" y="0" fill="#AE0F0A" />
+                                    <rect class="blue" x="12" width="2" height="6.5" rx="0.7" y="0" fill="#4F81C1" />
+                                    <rect class="yellow" x="9" width="2" height="6.5" rx="0.7" y="0" fill="#FFD400" />
+                                </g>
+                            </svg>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -191,8 +195,15 @@
     <!-- Dynamic footer section -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
-    <!-- Google Analytics -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-DNENL23GW2"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-DNENL23GW2');
+    </script>
     <!-- Fetching our Google Tag Manager -->
 
     <!--JavaScript at end of body for optimized loading-->
