--- a/education.html
+++ b/education.html
@@ -292,6 +292,7 @@
         <div>
             <h6>Politechnika Poznańska - Master's degree of Automatic Control and Robotics</h4>
             <li>Specialization - Smart Aerospace and Autonomous Systems</li>
+            <li>Due to Academic Success, Awarded for the PUT Rector Scholarship</li>
             <li>During my undergraduate education in the summer semester of the my 3rd year in 2019, I participated in the Erasmus+ program at the same university.</li>
         </div>
         <a class="bnt-more" href="javascript:void(0)">More</a>
