--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                             </svg>
                         </a>
 
-                        <a class="socialicon codeforces" href="https://linktr.ee/turhancankargin" target="_blank" rel="author">
+                        <a class="socialicon codeforces" href="https://bento.me/tkargin" target="_blank" rel="author">
                             <svg class="codeforces-icon" xmlns="http://www.w3.org/2000/svg" viewBox="5 0 14 19" width="100" height="100">
                                 <g>
                                     <rect class="red" x="15" width="2" height="6.5" rx="0.7" y="0" fill="#AE0F0A" />
