--- a/education.html
+++ b/education.html
@@ -13,13 +13,13 @@
     <meta name="Googlebot" content="index,follow" />
     <meta name="AdsBot-Google" content="index,follow" />
 
-    <meta property="og:site_name" content="https://portfolio.smaranjitghose.codes/education.html">
+    <meta property="og:site_name" content="https://turhancankargin.me/education.html">
     <meta property="og:title" content="Turhan Can Kargin | Education">
     <meta property="og:description" content="This project serves free and beautiful portfolio template for everyone. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://portfolio.smaranjitghose.codes/education.html">
+    <meta property="og:url" content="https://turhancankargin.me/education.html">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="https://portfolio.smaranjitghose.codes/education.html">
+    <meta name="twitter:site" content="https://turhancankargin.me/education.html">
 
     <meta name="application-name" content="Turhan Can Kargin | Education" />
     <meta name="apple-mobile-web-app-title" content="Turhan Can Kargin | Education" />
@@ -303,12 +303,12 @@
     <!-- Second -->
     <div class="timeline-item">
 
-      <div class="timeline-img"></div>
+        <div class="timeline-img"></div>
 
-      <div class="timeline-content timeline-card js--fadeInRight">
+        <div class="timeline-content timeline-card js--fadeInRight">
         <div>
             <div class="timeline-img-header" style="background-image: url('assets/images/education-page/edTimeline2.png'); background-repeat: no-repeat; background-size: auto; background-position: center top">
-              <h2 style="top: 140px"></h2>
+                <h2 style="top: 140px"></h2>
             </div>
         </div>
         <div class="date">2015-2020</div>
@@ -318,8 +318,7 @@
             <li>Highest Ranked Student of the Department</li>
         </div>
         <a class="bnt-more" href="javascript:void(0)">More</a>
-      </div>
-
+        </div>
     </div>   
 
     <!-- Third -->
