--- a/education.html
+++ b/education.html
@@ -294,7 +294,6 @@
             <li>Specialization - Smart Aerospace and Autonomous Systems</li>
             <li>4.75/5 GPA</li>
             <li>Due to Academic Success, Awarded for the PUT Rector Scholarship twice</li>
-            <li>During my undergraduate education in the summer semester of the my 3rd year in 2019, I participated in the Erasmus+ program at the same university.</li>
         </div>
         <a class="bnt-more" href="javascript:void(0)">More</a>
       </div>
@@ -305,7 +304,7 @@
 
         <div class="timeline-img"></div>
 
-        <div class="timeline-content timeline-card js--fadeInRight">
+        <div class="timeline-content js--fadeInRight">
         <div>
             <div class="timeline-img-header" style="background-image: url('assets/images/education-page/edTimeline2.png'); background-repeat: no-repeat; background-size: auto; background-position: center top">
                 <h2 style="top: 140px"></h2>
@@ -340,6 +339,28 @@
         <a class="bnt-more" href="javascript:void(0)">More</a>
       </div>
     </div>
+
+    <!-- Fourth -->
+    <div class="timeline-item">
+
+        <div class="timeline-img"></div>
+
+        <div class="timeline-content js--fadeInRight">
+        <div>
+            <div class="timeline-img-header" style="background-image: url('assets/images/education-page/edTimeline2.png'); background-repeat: no-repeat; background-size: auto; background-position: center top">
+                <h2 style="top: 140px"></h2>
+            </div>
+        </div>
+        <div class="date">2019</div>
+        <div class="alignment">
+            <h6>Politechnika Poznańska - Electronics and Telecommunications Engineering</h4>
+            <li>Final Average Grade : 4,53 / 5</li>
+            <li>During my undergraduate education, I have attended one semester Erasmus+ Exchange Program in Poznan/Poland</li>
+
+        </div>
+        <a class="bnt-more" href="javascript:void(0)">More</a>
+        </div>
+    </div> 
 
         </div>
       </section>
