--- a/education.html
+++ b/education.html
@@ -285,8 +285,7 @@
       <div class="timeline-img"></div>
 
       <div class="timeline-content js--fadeInLeft">
-        <div class="timeline-img-header" style="background-image: url('assets/images/education-page/ikc.png); background-repeat: no-repeat; background-size: auto;">
-          <h2></h2>
+        <div class="timeline-img-header">
         </div>
         <div class="date">2021-2022</div>
         <div>
@@ -306,8 +305,7 @@
 
         <div class="timeline-content js--fadeInRight">
         <div>
-            <div class="timeline-img-header" style="background-image: url('assets/images/education-page/edTimeline2.png'); background-repeat: no-repeat; background-size: auto; background-position: center top">
-                <h2 style="top: 140px"></h2>
+            <div class="timeline-img-header">
             </div>
         </div>
         <div class="date">2015-2020</div>
@@ -327,8 +325,7 @@
       <div class="timeline-img"></div>
 
       <div class="timeline-content js--fadeInLeft">
-        <div class="timeline-img-header" style="background-image: url('assets/images/education-page/edTimeline3.png'); background-repeat: no-repeat; background-size: auto">
-          <h2 style="top: 220px"></h2>
+        <div class="timeline-img-header">
         </div>
         <div class="date">2016-2021</div>
         <div class="align-third">
@@ -347,8 +344,7 @@
 
         <div class="timeline-content js--fadeInRight">
         <div>
-            <div class="timeline-img-header" style="background-image: url('assets/images/education-page/edTimeline2.png'); background-repeat: no-repeat; background-size: auto; background-position: center top">
-                <h2 style="top: 140px"></h2>
+            <div class="timeline-img-header">
             </div>
         </div>
         <div class="date">2019</div>
