--- a/education.html
+++ b/education.html
@@ -347,7 +347,7 @@
             <div class="timeline-img-header">
             </div>
         </div>
-        <div class="date">2019</div>
+        <div class="date">  -  2019  -  </div>
         <div class="alignment">
             <h6>Politechnika Poznańska - Electronics and Telecommunications Engineering</h4>
             <li>Final Average Grade : 4,53 / 5</li>
