--- a/education.html
+++ b/education.html
@@ -40,6 +40,7 @@
     <link rel="stylesheet" href="assets/css/education.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/cursor.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
     <link id='favicon' rel="icon" href="assets/images/favicon.png" type="image/png">
 
     <!-- For mooc svg icons 👇, might need it later -->
@@ -281,20 +282,19 @@
         <div class="container">
             
             <!-- Dynamic Education Timeline Cards -->
-            <div class="timeline-item">
+    <div class="timeline-item">
       <div class="timeline-img"></div>
 
       <div class="timeline-content js--fadeInLeft">
-        <div class="timeline-img-header">
-        </div>
-        <div class="date">2021-2022</div>
+        <div class="timeline-img-header" style="background-image: url('assets/images/education-page/edTimeline1.png'); background-repeat: no-repeat; background-size: auto;"></div>
+        <div class="date date1">2021-2022</div>
         <div>
-            <h6>Politechnika Poznańska - Master's degree of Automatic Control and Robotics</h4>
+            <h2 class="timelineHeading">Politechnika Poznańska</h2>
+            <h6>Master's of Science, Automatic Control and Robotics</h6>
             <li>Specialization - Smart Aerospace and Autonomous Systems</li>
             <li>4.75/5 GPA</li>
             <li>Due to Academic Success, Awarded for the PUT Rector Scholarship twice</li>
         </div>
-        <a class="bnt-more" href="javascript:void(0)">More</a>
       </div>
     </div> 
 
@@ -303,18 +303,17 @@
 
         <div class="timeline-img"></div>
 
-        <div class="timeline-content js--fadeInRight">
-        <div>
-            <div class="timeline-img-header">
+        <div class="timeline-content timeline-card js--fadeInRight">
+            <div>
+                <div class="timeline-img-header" style="background-image: url('assets/images/education-page/edTimeline2.png'); background-repeat: no-repeat; background-size: auto; background-position: center top"></div>
             </div>
-        </div>
-        <div class="date">2015-2020</div>
+            <div class="date date2">2015-2020</div>
         <div class="alignment">
-            <h6>Izmir Katip Celebi University - Bachelor's degree of Electrical & Electronics Engineering</h4>
+            <h3 class="timelineHeading2">Izmir Katip Celebi University</h3>
+            <h6>Bachelors of Science, Electrical & Electronics Engineering</h6>
             <li>3.57/4 GPA</li>
             <li>Highest Ranked Student of the Department</li>
         </div>
-        <a class="bnt-more" href="javascript:void(0)">More</a>
         </div>
     </div>   
 
@@ -325,15 +324,14 @@
       <div class="timeline-img"></div>
 
       <div class="timeline-content js--fadeInLeft">
-        <div class="timeline-img-header">
-        </div>
-        <div class="date">2016-2021</div>
+        <div class="timeline-img-header" style="background-image: url('assets/images/education-page/edTimeline3.png'); background-repeat: no-repeat; background-size: auto"></div>
+        <div class="date date3">2016-2021</div>
         <div class="align-third">
-            <h6>Anadolu University - Bachelor's degree of Business Administration</h4>
+            <h2 class="timelineHeading3">Anadolu University</h2>
+            <h6>Bachelor's degree of Business Administration</h6>
             <li>2.96/4 GPA</li>
             <li>Certificate of Honour for the 2016-2017 school year</li>
         </div>
-        <a class="bnt-more" href="javascript:void(0)">More</a>
       </div>
     </div>
 
@@ -342,19 +340,18 @@
 
         <div class="timeline-img"></div>
 
-        <div class="timeline-content js--fadeInRight">
-        <div>
-            <div class="timeline-img-header">
+        <div class="timeline-content timeline-card js--fadeInRight">
+            <div>
+                <div class="timeline-img-header" style="background-image: url('assets/images/education-page/edTimeline4.png'); background-repeat: no-repeat; background-size: auto; background-position: center top"></div>
             </div>
-        </div>
-        <div class="date">  -  2019  -  </div>
+            <div class="date date2">2018-2019</div>
         <div class="alignment">
-            <h6>Politechnika Poznańska - Electronics and Telecommunications Engineering</h4>
+            <h2 class="timelineHeading3">Politechnika Poznańska</h2>
+            <h6>Erasmus Exchange Program in Electronics and Telecommunications Engineering</h4>
             <li>Final Average Grade : 4,53 / 5</li>
-            <li>During my undergraduate education, I have attended one semester Erasmus+ Exchange Program in Poznan/Poland</li>
+            <li>During my undergraduate education in IKCU, I have attended one semester Erasmus+ Exchange Program in Poznan/Poland</li>
 
         </div>
-        <a class="bnt-more" href="javascript:void(0)">More</a>
         </div>
     </div> 
 
